<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAD5E2"
    tools:context=".latLongWeather">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/get_weather"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FF6666"
        android:textSize="48sp" />

    <LinearLayout
        android:id="@+id/linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="Nagpur | Amravati"
            android:hint="@string/enter_latitude"
            android:inputType="text"
            android:textColor="#0D0D0D"
            android:textColorHint="#0D0D0D" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="Nagpur | Amravati"
            android:hint="@string/enter_longitude"
            android:inputType="text"
            android:textColor="#0D0D0D"
            android:textColorHint="#0D0D0D" />

    </LinearLayout>

    <Button
        android:id="@+id/fetchData"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_Layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF6666"
        android:fontFamily="monospace"
        android:text="@string/fetch_It"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fetchData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/spacer"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/fetchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_location"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_location"
            android:src="@drawable/ic_baseline_location_on_24" />

    </LinearLayout>



    <TextView
        android:id="@+id/result2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fetchLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="monospace"
        android:text="@string/result"
        android:textAllCaps="false"
        android:textColor="#E07C24"
        android:textSize="22sp" />

</RelativeLayout>